--- a/new_machines/bootstrap/ubuntu.yml
+++ b/new_machines/bootstrap/ubuntu.yml
@@ -8,5 +8,13 @@
         - python3
         - htop
         - btop
-#        - rkhunter
       state: present
+
+  - name: Update APT cache
+    apt:
+      update_cache: yes
+      cache_valid_time: 3600
+
+  - name: Perform upgrade of all packages to the latest version
+    apt:
+      upgrade: dist
