--- a/install_software/install_wordpress.yml
+++ b/install_software/install_wordpress.yml
@@ -1,19 +1,11 @@
----
   - hosts: "{{ target }}"
     # special aport
     vars:
       ansible_port: "{{ aport | default('22') }}"
     # remote user
-    remote_user: rkhunter
+    remote_user: "{{ ssh_user }}"
     # become sudo
     become: yes
     # role to start
     roles:
-      - upgrade_deb
-      - hostnames
-      - users
-      - ssh
-      - aliases
-      - ufw
-      - motd
-      - fail2ban
+      - wordpress
