--- a/bootstrap_maschine/roles/motd/defaults/main.yml
+++ b/bootstrap_maschine/roles/motd/defaults/main.yml
@@ -8,7 +8,7 @@ motd_info:
   - " System Information: "
   - " FQDN:    ": "{{ ansible_fqdn }}"
   - " Distro:  ": "{{ ansible_distribution }} {{ ansible_distribution_version }} {{ ansible_distribution_release }}"
-  - " Virtual: ": "{{ '\033[0;32mYES\033[0m' if ansible_virtualization_role == 'guest' else '\033[0;31mNO\033[0m' }}"
+  # - " Virtual: ": "{{ '\033[0;32mYES\033[0m' if ansible_virtualization_role == 'guest' else '\033[0;31mNO\033[0m' }}"
   - " CPUs:    ": "{{ ansible_processor_vcpus }}"
   - " RAM:     ": "{{ (ansible_memtotal_mb / 1000) | round(1) }}GB"
   - " Network Information: "
