--- a/bootstrap_maschine/roles/motd/defaults/main.yml
+++ b/bootstrap_maschine/roles/motd/defaults/main.yml
@@ -5,17 +5,27 @@ motd_sysadmins_signature: rkhunter
 motd_sysadmins_email: us@linux-engineer.net
 
 motd_info:
-  - " System Information: "
-  - " FQDN:    ": "{{ ansible_fqdn }}"
-  - " Distro:  ": "{{ ansible_distribution }} {{ ansible_distribution_version }} {{ ansible_distribution_release }}"
-  # - " Virtual: ": "{{ '\033[0;32mYES\033[0m' if ansible_virtualization_role == 'guest' else '\033[0;31mNO\033[0m' }}"
-  - " CPUs:    ": "{{ ansible_processor_vcpus }}"
-  - " RAM:     ": "{{ (ansible_memtotal_mb / 1000) | round(1) }}GB"
-  - " Network Information: "
-  - " IP:      ": "{{ ansible_default_ipv4.address }}"
-  - " Gateway: ": "{{ ansible_default_ipv4.gateway }}"
-  - " Disk:    ": "{{ ansible_mounts[0].size_total / 1000 ** 3 | round(1) }}GB"
-
+  - key: "System Information:"
+    value: ""
+  - key: "FQDN:"
+    value: "{{ ansible_fqdn }}"
+  - key: "Distro:"
+    value: "{{ ansible_distribution }} {{ ansible_distribution_version }} {{ ansible_distribution_release }}"
+  - key: "Virtual:"
+    value: "{{ '\033[0;32mYES\033[0m' if ansible_virtualization_role == 'guest' else '\033[0;31mNO\033[0m' }}"
+  - key: "CPUs:"
+    value: "{{ ansible_processor_vcpus }}"
+  - key: "RAM:"
+    value: "{{ (ansible_memtotal_mb / 1000) | round(1) }}GB"
+  - key: "Network Information:"
+    value: ""
+  - key: "IP:"
+    value: "{{ ansible_default_ipv4.address }}"
+  - key: "Gateway:"
+    value: "{{ ansible_default_ipv4.gateway }}"
+  - key: "Disk:"
+    value: "{{ ansible_mounts[0].size_total / 1000 ** 3 | round(1) }}GB"
+    
 motd_content: |
   --------------------------------------------------------------------------
                       This system is managed by Ansible
