add check if allready finished

--- a/bootstrap_maschine/roles/aliases/tasks/main.yml
+++ b/bootstrap_maschine/roles/aliases/tasks/main.yml
@@ -1,4 +1,13 @@
 ---
+- name: Check if this role has already been executed
+  stat:
+    path: "/var/log/ansible/{{ role_name }}.done"
+  register: role_check
+
+- name: Skip this role if already executed
+  meta: end_play
+  when: role_check.stat.exists
+
 # Installiere zsh und benötigte Abhängigkeiten
 - name: Install zsh and dependencies
   apt:
@@ -203,3 +212,9 @@
   with_items:
     - /home/rkhunter
     - /root
+
+- name: Mark this role as executed
+  file:
+    path: "/var/log/ansible/{{ role_name }}.done"
+    state: touch
+    mode: "0644"
