--- a/bootstrap_maschine/roles/fail2ban/tasks/main.yml
+++ b/bootstrap_maschine/roles/fail2ban/tasks/main.yml
@@ -1,4 +1,13 @@
 ---
+- name: Check if this role has already been executed
+  stat:
+    path: "/var/log/ansible/{{ role_name }}.done"
+  register: role_check
+
+- name: Skip this role if already executed
+  meta: end_play
+  when: role_check.stat.exists
+  
 # tasks file for fail2ban
 
 - name: import assert.yml
@@ -68,3 +77,9 @@
     name: "{{ fail2ban_service }}"
     state: started
     enabled: yes
+
+- name: Mark this role as executed
+  file:
+    path: "/var/log/ansible/{{ role_name }}.done"
+    state: touch
+    mode: "0644"
