--- a/bootstrap_maschine/roles/motd/tasks/main.yml
+++ b/bootstrap_maschine/roles/motd/tasks/main.yml
@@ -1,4 +1,13 @@
 ---
+  - name: Check if this role has already been executed
+    stat:
+      path: "/var/log/ansible/{{ role_name }}.done"
+    register: role_check
+
+  - name: Skip this role if already executed
+    meta: end_play
+    when: role_check.stat.exists
+
 # tasks file for motd
 
   - name: Send login file motd
@@ -8,3 +17,9 @@
       owner: root
       group: root
       mode: 0644
+
+  - name: Mark this role as executed
+    file:
+      path: "/var/log/ansible/{{ role_name }}.done"
+      state: touch
+      mode: "0644"
