--- a/bootstrap_maschine/roles/unattend_upgrade_deb/tasks/main.yml
+++ b/bootstrap_maschine/roles/unattend_upgrade_deb/tasks/main.yml
@@ -1,3 +1,18 @@
 ---
- - include_tasks: unattended-upgrades.yml
-   tags: unattended
+  - name: Check if this role has already been executed
+    stat:
+      path: "/var/log/ansible/{{ role_name }}.done"
+    register: role_check
+
+  - name: Skip this role if already executed
+    meta: end_play
+    when: role_check.stat.exists
+
+  - include_tasks: unattended-upgrades.yml
+    tags: unattended
+  
+  - name: Mark this role as executed
+    file:
+      path: "/var/log/ansible/{{ role_name }}.done"
+      state: touch
+      mode: "0644"
