fix missing directory

--- a/bootstrap_maschine/roles/aliases/tasks/main.yml
+++ b/bootstrap_maschine/roles/aliases/tasks/main.yml
@@ -212,6 +212,14 @@
   with_items:
     - /home/rkhunter
     - /root
+    
+- name: Ensure log directory exists
+  file:
+    path: /var/log/ansible
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
 
 - name: Mark this role as executed
   file:
