--- a/bootstrap_maschine/roles/hostnames/tasks/main.yml
+++ b/bootstrap_maschine/roles/hostnames/tasks/main.yml
@@ -25,6 +25,14 @@
     mode: "{{ hosts_mode }}"
   tags:
     - configuration
+
+- name: Ensure log directory exists
+  file:
+    path: /var/log/ansible
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
     
 - name: Mark this role as executed
   file:
