--- a/bootstrap_maschine/roles/server_config/tasks/main.yml
+++ b/bootstrap_maschine/roles/server_config/tasks/main.yml
@@ -54,6 +54,14 @@
 - name: set time/date Berlin
   shell: "timedatectl set-timezone Europe/Berlin"
 
+- name: Ensure log directory exists
+  file:
+    path: /var/log/ansible
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+
 - name: Mark this role as executed
   file:
     path: "/var/log/ansible/{{ role_name }}.done"
