--- a/bootstrap_maschine/roles/motd/tasks/main.yml
+++ b/bootstrap_maschine/roles/motd/tasks/main.yml
@@ -18,6 +18,14 @@
       group: root
       mode: 0644
 
+  - name: Ensure log directory exists
+    file:
+      path: /var/log/ansible
+      state: directory
+      owner: root
+      group: root
+      mode: 0755
+
   - name: Mark this role as executed
     file:
       path: "/var/log/ansible/{{ role_name }}.done"
