--- a/bootstrap_maschine/roles/ssh/tasks/main.yml
+++ b/bootstrap_maschine/roles/ssh/tasks/main.yml
@@ -57,6 +57,14 @@
 - name: set new ansible_ssh_port
   set_fact: ansible_ssh_port=2299
 
+- name: Ensure log directory exists
+  file:
+    path: /var/log/ansible
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+
 - name: Mark this role as executed
   file:
     path: "/var/log/ansible/{{ role_name }}.done"
