--- a/bootstrap_maschine/roles/ufw/tasks/main.yml
+++ b/bootstrap_maschine/roles/ufw/tasks/main.yml
@@ -16,6 +16,14 @@
 
 - import_tasks: manage.yml
 
+- name: Ensure log directory exists
+  file:
+    path: /var/log/ansible
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+
 - name: Mark this role as executed
   file:
     path: "/var/log/ansible/{{ role_name }}.done"
