--- a/bootstrap_maschine/roles/unattend_upgrade_rpm/tasks/main.yml
+++ b/bootstrap_maschine/roles/unattend_upgrade_rpm/tasks/main.yml
@@ -14,6 +14,14 @@
   - include_tasks: unattended-upgrades.yml
     tags: unattended
 
+  - name: Ensure log directory exists
+    file:
+      path: /var/log/ansible
+      state: directory
+      owner: root
+      group: root
+      mode: 0755
+
   - name: Mark this role as executed
     file:
       path: "/var/log/ansible/{{ role_name }}.done"
