--- a/bootstrap_maschine/roles/aliases/tasks/main.yml
+++ b/bootstrap_maschine/roles/aliases/tasks/main.yml
@@ -31,7 +31,7 @@
 
 - name: Install Oh My Zsh for root
   shell: |
-    RUNZSH=no sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    RUNZSH=no CHSH=no sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
   when: not ohmyzsh_root_installed.stat.exists
 
 # Installiere Oh My Zsh für rkhunter
@@ -42,7 +42,7 @@
 
 - name: Install Oh My Zsh for rkhunter
   shell: |
-    RUNZSH=no sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    RUNZSH=no CHSH=no sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
   when: not ohmyzsh_rkhunter_installed.stat.exists
 
 # Installiere Plugins für zsh
