--- a/bootstrap_maschine/roles/ssh/handlers/main.yml
+++ b/bootstrap_maschine/roles/ssh/handlers/main.yml
@@ -1,7 +1,9 @@
 ---
 # handlers for ssh role
+- name: daemon-reload
+  command: systemctl daemon-reload
 
-- name: restart ssh
+- name: restart-ssh
   service:
     name: "{{ ssh_service }}"
     state: restarted
