--- a/bootstrap_maschine/roles/ssh/tasks/main.yml
+++ b/bootstrap_maschine/roles/ssh/tasks/main.yml
@@ -24,23 +24,27 @@
     group: root
     mode: 0644
 
-- name: Check if ssh or sshd service exists
+- name: Check if ssh, sshd service, or ssh.socket exists
   shell: |
     if systemctl list-units --type=service | grep -q sshd.service; then
       echo sshd.service;
     elif systemctl list-units --type=service | grep -q ssh.service; then
       echo ssh.service;
+    elif systemctl list-units --type=socket | grep -q ssh.socket; then
+      echo ssh.socket;
     else
       echo none;
     fi
   register: ssh_service_check
 
-- name: Restart the SSH service
+- name: Restart the SSH service or socket
   shell: |
-    if [ "{{ ssh_service_check.stdout }}" != "none" ]; then
+    if [ "{{ ssh_service_check.stdout }}" = "ssh.socket" ]; then
+      systemctl restart ssh.socket;
+    elif [ "{{ ssh_service_check.stdout }}" != "none" ]; then
       systemctl restart {{ ssh_service_check.stdout }};
     else
-      echo "No SSH service found, skipping restart.";
+      echo "No SSH service or socket found, skipping restart.";
     fi
   changed_when: ssh_service_check.stdout != "none"
   ignore_errors: true
